@@ -281,36 +281,36 @@ public class ConvertChartContext implements ChartContext
 			TimeSeries series = new TimeSeries("First", "Year", "Count", Year.class);
 			try 
 			{
-				series.add(new Year(1976), new Integer(0));
-				series.add(new Year(1977), new Integer(1));
-				series.add(new Year(1978), new Integer(0));
-				series.add(new Year(1979), new Integer(2));
-				series.add(new Year(1980), new Integer(0));
-				series.add(new Year(1981), new Integer(1));
-				series.add(new Year(1982), new Integer(2));
-				series.add(new Year(1983), new Integer(5));
-				series.add(new Year(1984), new Integer(21));
-				series.add(new Year(1985), new Integer(18));
-				series.add(new Year(1986), new Integer(18));
-				series.add(new Year(1987), new Integer(25));
-				series.add(new Year(1988), new Integer(11));
-				series.add(new Year(1989), new Integer(16));
-				series.add(new Year(1990), new Integer(23));
-				series.add(new Year(1991), new Integer(14));
-				series.add(new Year(1992), new Integer(31));
-				series.add(new Year(1993), new Integer(38));
-				series.add(new Year(1994), new Integer(31));
-				series.add(new Year(1995), new Integer(56));
-				series.add(new Year(1996), new Integer(45));
-				series.add(new Year(1997), new Integer(74));
-				series.add(new Year(1998), new Integer(68));
-				series.add(new Year(1999), new Integer(98));
-				series.add(new Year(2000), new Integer(85));
-				series.add(new Year(2001), new Integer(66));
-				series.add(new Year(2002), new Integer(71));
-				series.add(new Year(2003), new Integer(65));
-				series.add(new Year(2004), new Integer(59));
-				series.add(new Year(2005), new Integer(60));
+				series.add(new Year(1976), Integer.valueOf(0));
+				series.add(new Year(1977), Integer.valueOf(1));
+				series.add(new Year(1978), Integer.valueOf(0));
+				series.add(new Year(1979), Integer.valueOf(2));
+				series.add(new Year(1980), Integer.valueOf(0));
+				series.add(new Year(1981), Integer.valueOf(1));
+				series.add(new Year(1982), Integer.valueOf(2));
+				series.add(new Year(1983), Integer.valueOf(5));
+				series.add(new Year(1984), Integer.valueOf(21));
+				series.add(new Year(1985), Integer.valueOf(18));
+				series.add(new Year(1986), Integer.valueOf(18));
+				series.add(new Year(1987), Integer.valueOf(25));
+				series.add(new Year(1988), Integer.valueOf(11));
+				series.add(new Year(1989), Integer.valueOf(16));
+				series.add(new Year(1990), Integer.valueOf(23));
+				series.add(new Year(1991), Integer.valueOf(14));
+				series.add(new Year(1992), Integer.valueOf(31));
+				series.add(new Year(1993), Integer.valueOf(38));
+				series.add(new Year(1994), Integer.valueOf(31));
+				series.add(new Year(1995), Integer.valueOf(56));
+				series.add(new Year(1996), Integer.valueOf(45));
+				series.add(new Year(1997), Integer.valueOf(74));
+				series.add(new Year(1998), Integer.valueOf(68));
+				series.add(new Year(1999), Integer.valueOf(98));
+				series.add(new Year(2000), Integer.valueOf(85));
+				series.add(new Year(2001), Integer.valueOf(66));
+				series.add(new Year(2002), Integer.valueOf(71));
+				series.add(new Year(2003), Integer.valueOf(65));
+				series.add(new Year(2004), Integer.valueOf(59));
+				series.add(new Year(2005), Integer.valueOf(60));
 			}
 			catch (Exception e) 
 			{
